--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "SprintBot"
+name = "sprint_bot"
 version = "0.1.0"
 authors = ["Ilya Linnik <thenixan@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+dotenv = "0.14.1"
